--- a/CCIP/CCIP/Main.storyboard
+++ b/CCIP/CCIP/Main.storyboard
@@ -138,5 +138,127 @@
             </objects>
             <point key="canvasLocation" x="301" y="118"/>
         </scene>
+        <!--Checkin View Controller-->
+        <scene sceneID="s5H-mK-055">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="M8l-mK-H7w" sceneMemberID="firstResponder"/>
+                <viewController storyboardIdentifier="CheckinViewController" id="6Xx-bx-CvE" customClass="CheckinViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="dX4-Wl-0Qv"/>
+                        <viewControllerLayoutGuide type="bottom" id="u6h-tC-buW"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="kcU-VE-fa5">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="f3a-eQ-zuL">
+                                <rect key="frame" x="4" y="0.0" width="592" height="600"/>
+                                <color key="backgroundColor" red="0.0" green="0.65098039215686276" blue="0.38823529411764707" alpha="1" colorSpace="calibratedRGB"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="PSj-is-CAn" customClass="RGCardViewLayout">
+                                    <size key="itemSize" width="363" height="608"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="reuse" id="MVU-7K-L2Y" customClass="CheckinViewCell">
+                                        <rect key="frame" x="114.5" y="0.0" width="363" height="608"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="363" height="608"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="8/20" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KuB-Uh-zQj">
+                                                    <rect key="frame" x="7" y="147" width="347" height="80"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="80" id="L8Z-wf-LfC"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="72"/>
+                                                    <color key="textColor" red="0.25490196078431371" green="0.45882352941176469" blue="0.019607843137254902" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="報到" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LX2-G2-ptg">
+                                                    <rect key="frame" x="8" y="227" width="347" height="44"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="44" id="yOS-OL-xnN"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                                    <color key="textColor" red="0.25490196079999999" green="0.45882352939999999" blue="0.019607843140000001" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="coH-dF-V3g">
+                                                    <rect key="frame" x="18" y="407" width="327" height="46"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="46" id="Jgr-5r-XMl"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <state key="normal" title="CHECK IN"/>
+                                                </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&quot;It's BETTER when it's SHARED.&quot;  「分享」一直以來都是 COSCUP 的主軸，我們相信，唯有透過分享、討論與眾人的再創造，才能真正落實 open source 的精神與信念，帶給這個世界更多的可能。" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PjL-WA-yBM">
+                                                    <rect key="frame" x="18" y="279" width="327" height="120"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="120" id="50w-lx-lpf"/>
+                                                        <constraint firstAttribute="height" constant="150" id="Ljr-qf-QoF"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                    <variation key="default">
+                                                        <mask key="constraints">
+                                                            <exclude reference="Ljr-qf-QoF"/>
+                                                        </mask>
+                                                    </variation>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstItem="PjL-WA-yBM" firstAttribute="centerY" secondItem="MVU-7K-L2Y" secondAttribute="centerY" constant="35" id="FKj-pP-EZM"/>
+                                            <constraint firstItem="PjL-WA-yBM" firstAttribute="height" secondItem="MVU-7K-L2Y" secondAttribute="height" constant="-186" id="NyR-5b-ark"/>
+                                            <constraint firstItem="PjL-WA-yBM" firstAttribute="top" secondItem="LX2-G2-ptg" secondAttribute="bottom" constant="8" id="TJL-Fy-d9T"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="LX2-G2-ptg" secondAttribute="trailing" id="UgX-5P-Sgc"/>
+                                            <constraint firstItem="KuB-Uh-zQj" firstAttribute="leading" secondItem="MVU-7K-L2Y" secondAttribute="leadingMargin" constant="-0.5" id="bJp-hs-tan"/>
+                                            <constraint firstItem="coH-dF-V3g" firstAttribute="top" secondItem="PjL-WA-yBM" secondAttribute="bottom" constant="8" id="dyh-3p-5fc"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="coH-dF-V3g" secondAttribute="trailing" constant="10" id="hko-4P-Fkf"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="PjL-WA-yBM" secondAttribute="trailing" constant="10" id="jPp-Un-IEr"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="KuB-Uh-zQj" secondAttribute="trailing" constant="0.5" id="lnO-QU-DF2"/>
+                                            <constraint firstAttribute="leadingMargin" secondItem="LX2-G2-ptg" secondAttribute="leading" id="pLA-WU-Fb6"/>
+                                            <constraint firstItem="LX2-G2-ptg" firstAttribute="top" secondItem="KuB-Uh-zQj" secondAttribute="bottom" id="tDo-jZ-7pB"/>
+                                            <constraint firstItem="coH-dF-V3g" firstAttribute="leading" secondItem="MVU-7K-L2Y" secondAttribute="leadingMargin" constant="10" id="udN-kg-Noc"/>
+                                            <constraint firstAttribute="leadingMargin" secondItem="PjL-WA-yBM" secondAttribute="leading" constant="-10" id="w5r-MF-ehp"/>
+                                        </constraints>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                <integer key="value" value="15"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="NyR-5b-ark"/>
+                                            </mask>
+                                        </variation>
+                                        <connections>
+                                            <outlet property="checkinBtn" destination="coH-dF-V3g" id="Z4g-Sy-5te"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="6Xx-bx-CvE" id="qaM-Wf-fAk"/>
+                                </connections>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="u6h-tC-buW" firstAttribute="top" secondItem="f3a-eQ-zuL" secondAttribute="bottom" id="DnL-8F-MG3"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="f3a-eQ-zuL" secondAttribute="trailing" constant="-16" id="LPF-a9-MDM"/>
+                            <constraint firstItem="f3a-eQ-zuL" firstAttribute="leading" secondItem="kcU-VE-fa5" secondAttribute="leadingMargin" constant="-16" id="Pca-48-BZr"/>
+                            <constraint firstItem="f3a-eQ-zuL" firstAttribute="top" secondItem="kcU-VE-fa5" secondAttribute="topMargin" id="qE5-Ae-l4H"/>
+                        </constraints>
+                    </view>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="301" y="1029"/>
+        </scene>
     </scenes>
 </document>
