--- a/CCIP/CCIP/Main.storyboard
+++ b/CCIP/CCIP/Main.storyboard
@@ -169,7 +169,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="8/20" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KuB-Uh-zQj">
-                                                    <rect key="frame" x="7" y="147" width="347" height="80"/>
+                                                    <rect key="frame" x="7" y="152" width="347" height="80"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="80" id="L8Z-wf-LfC"/>
                                                     </constraints>
@@ -178,7 +178,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="報到" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LX2-G2-ptg">
-                                                    <rect key="frame" x="8" y="227" width="347" height="44"/>
+                                                    <rect key="frame" x="8" y="232" width="347" height="44"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="44" id="yOS-OL-xnN"/>
                                                     </constraints>
@@ -187,17 +187,17 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="coH-dF-V3g">
-                                                    <rect key="frame" x="18" y="407" width="327" height="46"/>
+                                                    <rect key="frame" x="18" y="402" width="327" height="46"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="46" id="Jgr-5r-XMl"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                     <state key="normal" title="CHECK IN"/>
                                                 </button>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&quot;It's BETTER when it's SHARED.&quot;  「分享」一直以來都是 COSCUP 的主軸，我們相信，唯有透過分享、討論與眾人的再創造，才能真正落實 open source 的精神與信念，帶給這個世界更多的可能。" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PjL-WA-yBM">
-                                                    <rect key="frame" x="18" y="279" width="327" height="120"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="「分享」一直以來都是 COSCUP 的主軸，我們相信，唯有透過分享、討論與眾人的再創造，才能真正落實 open source 的精神與信念，帶給這個世界更多的可能。" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PjL-WA-yBM">
+                                                    <rect key="frame" x="18" y="284" width="327" height="110"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="120" id="50w-lx-lpf"/>
+                                                        <constraint firstAttribute="height" constant="110" id="50w-lx-lpf"/>
                                                         <constraint firstAttribute="height" constant="150" id="Ljr-qf-QoF"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
