--- a/CCIP/CCIP/ProgramDetailViewController.xib
+++ b/CCIP/CCIP/ProgramDetailViewController.xib
@@ -19,7 +19,7 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ScheduleDetailViewTopBG.png" translatesAutoresizingMaskIntoConstraints="NO" id="2zz-1u-asa">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ProgramDetailViewTopBG.png" translatesAutoresizingMaskIntoConstraints="NO" id="2zz-1u-asa">
                     <rect key="frame" x="0.0" y="64" width="375" height="156"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="156" id="J6p-27-0ta"/>
@@ -69,6 +69,6 @@
         </view>
     </objects>
     <resources>
-        <image name="ScheduleDetailViewTopBG.png" width="375" height="156"/>
+        <image name="ProgramDetailViewTopBG.png" width="375" height="156"/>
     </resources>
 </document>
