--- a/CCIP/CCIP/Main.storyboard
+++ b/CCIP/CCIP/Main.storyboard
@@ -47,16 +47,16 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="N3c-1x-If0">
-                                <rect key="frame" x="150" y="366" width="300" height="30"/>
+                                <rect key="frame" x="150" y="290" width="300" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="33T-P4-oX9"/>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="6FO-ei-bwB"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="join"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8w3-iH-STq">
-                                <rect key="frame" x="200" y="446" width="200" height="30"/>
+                                <rect key="frame" x="200" y="340" width="200" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="200" id="PpU-2O-g6i"/>
                                     <constraint firstAttribute="height" constant="30" id="ig4-GZ-UB1"/>
@@ -73,13 +73,13 @@
                             <constraint firstAttribute="trailingMargin" secondItem="Ane-io-2fB" secondAttribute="trailing" constant="-20" id="Cqg-DU-klY"/>
                             <constraint firstItem="N3c-1x-If0" firstAttribute="top" secondItem="Ane-io-2fB" secondAttribute="bottom" constant="-20" id="Eqi-QH-TRb"/>
                             <constraint firstItem="Ane-io-2fB" firstAttribute="top" secondItem="7ZP-Wx-GSU" secondAttribute="topMargin" constant="-20" id="GeG-mv-zsA"/>
-                            <constraint firstItem="8w3-iH-STq" firstAttribute="top" secondItem="N3c-1x-If0" secondAttribute="bottom" constant="50" id="INK-dJ-wVd"/>
+                            <constraint firstItem="8w3-iH-STq" firstAttribute="top" secondItem="N3c-1x-If0" secondAttribute="bottom" constant="20" id="INK-dJ-wVd"/>
                             <constraint firstItem="Ane-io-2fB" firstAttribute="leading" secondItem="7ZP-Wx-GSU" secondAttribute="leadingMargin" constant="-20" id="K5y-rv-EDV"/>
                             <constraint firstItem="Ane-io-2fB" firstAttribute="top" secondItem="Ikf-Vw-yPD" secondAttribute="bottom" constant="-20" id="KOz-oh-FfY"/>
                             <constraint firstAttribute="bottomMargin" secondItem="Ane-io-2fB" secondAttribute="bottom" constant="-20" id="PXw-Op-yQS"/>
                             <constraint firstItem="8w3-iH-STq" firstAttribute="centerX" secondItem="7ZP-Wx-GSU" secondAttribute="centerX" id="RZS-Rn-9Bt"/>
                             <constraint firstItem="N3c-1x-If0" firstAttribute="leading" secondItem="7ZP-Wx-GSU" secondAttribute="leadingMargin" constant="50" id="S00-dw-zFr"/>
-                            <constraint firstItem="N3c-1x-If0" firstAttribute="top" secondItem="nug-PN-SE0" secondAttribute="bottom" constant="96" id="Uhb-iJ-6uO"/>
+                            <constraint firstItem="N3c-1x-If0" firstAttribute="top" secondItem="nug-PN-SE0" secondAttribute="bottom" constant="20" id="Uhb-iJ-6uO"/>
                             <constraint firstAttribute="trailingMargin" secondItem="N3c-1x-If0" secondAttribute="trailing" constant="50" id="eNG-eq-nTB"/>
                             <constraint firstItem="N3c-1x-If0" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="7ZP-Wx-GSU" secondAttribute="leadingMargin" constant="10" id="gFJ-ZQ-1MH"/>
                             <constraint firstAttribute="trailingMargin" secondItem="nug-PN-SE0" secondAttribute="trailing" constant="20" id="oKL-dN-gMh"/>
@@ -172,7 +172,7 @@
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="80" id="L8Z-wf-LfC"/>
                                                     </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="72"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="60"/>
                                                     <color key="textColor" red="0.25490196078431371" green="0.45882352941176469" blue="0.019607843137254902" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -258,6 +258,9 @@
                             <constraint firstItem="f3a-eQ-zuL" firstAttribute="top" secondItem="kcU-VE-fa5" secondAttribute="top" id="qE5-Ae-l4H"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="cards" destination="f3a-eQ-zuL" id="fno-AA-J1V"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="M8l-mK-H7w" sceneMemberID="firstResponder"/>
             </objects>
